<resources>
	<string name="school_name">MOCA School</string>
	<string name="app_name">MOCA</string>
	<string name="versionSupport">This books looks to be in a different format, we
		are working hard to have a newer version of App in place that would
		help you in reading this book.</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="loadingPage">Please be patient. Loading page...</string>
	<string name="bookOpen">Please have patience, we are opening your book.
		Soon you can enjoy reading.</string>
	<string name="XMlBookTypeTitle">This books appears to be in different format. To be
		specific it is an XML version.</string>
	<string name="deleteBookTitle">Delete!</string>
	<string name="confirmationMessage">Are you sure, you want to proceed with deleting the
		book. Once confirmed, this book will no longer be available in your
		shelf. You will have to download it again to read offline. Please note
		all bookmarks / notes associated with this book would also be lost.</string>
	<string name="book_download_problem">There was some problem while downloading. If you wish to download again please click on "redownload" button.</string>
	<string name="empty_shelf_alert">You didn\'t download any book. Please go to the store to download.</string>
	<string name="shelf_search_empty">Please download book to search</string>
	<string name="shelf_search_no_match">No book found that matched your search criteria.</string>
	<string name="deleteBook">Book you have selected is being deleted.</string>
	<string name="confirm_redownload_title">Books list missing!!</string>
	<string name="confirm_redownload_msg">Looks like you have changed your tablet, there are
		few books which you have downloaded earlier but do not exists on this
		tablet. Would you like to sync book download ?</string>
	<string name="confirm_redownload_books_title">Few books are missing!!</string>
	<string name="downloadMissingBooks">Looks like you have changed your tablet, there are
		few books which you have downloaded earlier but do not exists on this
		tablet. Would you like to sync book download ?</string>
	<string name="removeNondownloadedFiles">Synchronizing files that are downloaded with the
		server.</string>
	<string name="unable_to_download_book_no_network_connection">You don\'t have internet connectivity. Please connect, so that you can download the book.</string>
	<string name="removeBooks">Selected book is being removed from tablet. If you
		require this in future, you can download the same from library.</string>
	<string name="notebook_network_un_available">Please check your Internet connection and then click on the refresh button to download 
		the list of subjects once the wifi is enabled.</string>
	<string name="refresh_when_network_available">As you didn\'t download list of subjects please click refresh to download.</string>
	<string name="subject_desc">Displaying notes for</string>
	<string name="notebook_hint">Click Add to start writing your notes</string>
	<string name="notebook_savelabel">Delete</string>
	<string name="notebok_searchgooglelabel">Search Google</string>
	<string name="notebook_dictionarylabel">Dictionary</string>
	<string name="book_parsing_error">Book you have downloaded is not according to standards please contact Admin to rectify the problem</string>
	<string name="book_no_chapter">Book you have downloaded does not contain any chapters, please contact Admin to rectify the problem</string>
	<string name="book_not_downloaded">You didn\'t download the book from this device. Please contact admin to rectify</string>
	<string name="go_to_page_field_cant_be_null">Field can\'t be empty</string>
	<string name="loginFailureMessage">Unable to login. Please check your username /
		password and try again.</string>
	<string name="notesHint">Just type in your thought, once done tap out side
		of box and we would take care of rest.</string>
	<string name="notesSaved">You rock. Your notes is saved. Continue reading
		and have fun.</string>
	<string name="notesAlert">Oops. You did not type anything. Please type in
		your thought so that we can save it.</string>
	<string name="bookmarkHint">Just type in what you think is best way to remember
		this page, once done tap out side of box and we would take care of
		rest.</string>
	<string name="bookmarkSaved">Hurray. I have bookmarked your page, please
		continue reading. You refer bookmark list to view all your bookmarks.</string>
	<string name="bookmark_status">You have already bookmarked this page.If you wish to bookmark again please delete the bookmark and Add</string>
	<string name="bookmarkAlert">Oops. You did not provide text for your bookmark.
		Kindly provide relevant text so that you can search it easily in
		future.</string>
	<string name="feedbackAlert">Oops. You did not post your thoughts</string>
	<string name="feedbackHint">Please post your thoughts / ideas / suggestions it
		would be really helpful to improvise</string>
	<string name="bookmarkDeleteStatus">You have just removed this page from bookmark list
		of yours. You can bookmark it again by tapping the same icon.</string>
	<string name="feedback">
		<b>If you have any questions please let us know\n</b>
	</string>
	<string name="GoToPageLimt">Inavlid page Num- Please enter the number between 1 to %2$d</string>
	<string name="EpubUnzip">As you are opening the book for the first time it will take few moments to open.</string>
	<string name="brightness">Please drag the bar below to set brightness</string>
	<string name="book_does_not_exists_in_local">Oops! Something unexpected happened. Please check with the support on the issues.</string>
	<string name="ConfigChanges">Changes have been saved successfully</string>
	<string name="about">About</string>
	<string name="goto_page">Go to page...</string>
	<string name="goto_page_dialog_title">Go to page</string>
	<string name="goto_page_go_button">Go</string>
	<string name="rotate_page_left">Rotate left</string>
	<string name="rotate_page_right">Rotate right</string>
	<string name="find_text">Find...</string>
	<string name="find_dialog_title">Find text</string>
	<string name="find_go_button">Find</string>
	<string name="find_cancel_button">Cancel</string>
	<string name="clear_find_text">Clear find</string>
	<string name="choose_file">Open...</string>
	<string name="toggle_invert">Invert</string>
	<string name="toggle_fine_zoom">Toggle fine zoom</string>
	<string name="set_as_home">Set current folder as home</string>
	<string name="go_home">Home</string>
	<string name="cancel">Cancel</string>
	<string name="searching_for">Searching for "%1$s"</string>
	<string name="page_of">Page %1$d of %2$d</string>
	<string name="options">Options</string>
	<string name="zoom_animation">Zoom buttons</string>
	<string-array name="zoom_animations">
		<item>100</item>
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
	<string-array name="zoom_animation_labels">
		<item>disabled</item>
		<item>disappear</item>
		<item>almost disappear</item>
		<item>fade</item>
	</string-array>
	<string name="default_zoom_animation">2</string>
	<string name="page_animation">Page number/count</string>
	<string-array name="page_animations">
		<item>100</item>
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
	</string-array>
	<string-array name="page_animation_labels">
		<item>disabled</item>
		<item>disappear</item>
		<item>almost disappear</item>
		<item>fade</item>
		<item>show always</item>
	</string-array>
	<string name="default_page_animation">2</string>
	<string name="fade_speed">Zoom and page fade wait</string>
	<string-array name="fade_speeds">
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
		<item>7</item>
	</string-array>
	<string-array name="fade_speed_labels">
		<item>1 second</item>
		<item>2 seconds</item>
		<item>3 seconds</item>
		<item>4 seconds</item>
		<item>5 seconds</item>
		<item>6 seconds</item>
		<item>7 seconds</item>
	</string-array>
	<string name="default_fade_speed">7</string>
	<string name="invert">Invert colors</string>
	<string name="dirs_first">List directories first</string>
	<string name="show_extension">Show .pdf extension</string>
	<string name="orientation">Orientation</string>
	<string name="default_orientation">0</string>
	<string-array name="orientation_labels">
		<item>automatic</item>
		<item>harder to change</item>
		<item>lock to portrait</item>
		<item>lock to landscape</item>
	</string-array>
	<string-array name="orientations">
		<item>0</item>
		<item>3</item>
		<item>1</item>
		<item>2</item>
	</string-array>
	<string name="viewer">PDF Viewer</string>
	<string name="selector">File Chooser</string>
	<string name="fullscreen">Fullscreen</string>
	<string name="render_ahead">Render ahead</string>
	<string name="render_ahead_sub">Uses more memory but faster forward scrolling.</string>
	<string name="gray">Grayscale</string>
	<string name="gray_sub">No colors, slightly slower, but uses less memory.</string>
	<string name="page">Page</string>
	<string name="color_mode">Color mode</string>
	<string-array name="color_mode_labels">
		<item>Normal color</item>
		<item>Inverted color</item>
		<item>Normal black and white</item>
		<item>Inverted black and white</item>
		<item>Black on yellowish</item>
		<item>Green on black</item>
		<item>Red on black</item>
	</string-array>
	<string-array name="color_modes">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
		<item>5</item>
		<item>6</item>
	</string-array>
	<string name="default_color_mode">0</string>
	<string name="omit_images">Skip images</string>
	<string name="vertical_scroll_lock">Vertical scroll lock</string>
	<string name="vertical_scroll_lock_sub">To scroll horizontally, you must first move
		horizontally 1/5 of the screen width.</string>
	<string name="box">PDF page box type</string>
	<string-array name="box_labels">
		<item>ArtBox</item>
		<item>BleedBox</item>
		<item>CropBox</item>
		<item>MediaBox</item>
		<item>TrimBox</item>
	</string-array>
	<string-array name="boxes">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>3</item>
		<item>4</item>
	</string-array>
	<string name="default_box">2</string>
	<string name="extra_cache">Extra cache memory</string>
	<string name="extra_cache_sub">Using extra cache memory can improve scrolling
		smoothness at the expense of stability.</string>
	<string-array name="extra_caches">
		<item>0</item>
		<item>1</item>
		<item>2</item>
		<item>4</item>
		<item>6</item>
		<item>8</item>
		<item>10</item>
	</string-array>
	<string name="step1_from_date_label">Starts on</string>
	<string name="step1_test_name">Test Name</string>
	<string name="step1_to_date_label">Ends on</string>
	<string name="step1_duration">Duration(mins)</string>
	<string name="step1_repeat_test">Repeat Test</string>
	<string name="step1_open_book">Open Book</string>
	<string name="step1_open_book_list">List of Books</string>
	<string name="step1_check_all">Check All</string>
	<string name="next">Next</string>
	<string name="mandatory_message">Fields marked with * are mandatory</string>
	<string name="exam_category">Exam Category</string>
	<string name="duration">Duration(mins)</string>
	<string name="exam_category_list">Category</string>
	<string name="quizzard">QUIZZARD</string>
	<string name="Exam_list">EXAMS LIST</string>
	<string name="subject">Subject</string>
	<string name="status">Status</string>
	<string name="penTitle">Pen</string>
	<string name="eraserTitle">Eraser</string>
	<string name="undoTitle">Undo</string>
	<string name="redoTitle">Redo</string>
	<string name="saveCanvas">Save</string>
	<string name="clearCanvas">Clear</string>
	<string name="closeCanvas">Close</string>
</resources>