<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/item1" android:title="@string/penTitle" android:icon="@drawable/pen" />
    <item android:id="@+id/item2" android:title="@string/eraserTitle" android:icon="@drawable/erase"  />
    <item android:id="@+id/item3" android:title="@string/undoTitle" android:icon="@drawable/undo"  />
    <item android:id="@+id/item4" android:title="@string/redoTitle" android:icon="@drawable/redo"  />
    <item android:id="@+id/item5" android:title="@string/saveCanvas"  />
    <!-- <item android:id="@+id/item6" android:title="@string/loadCanvas"  /> -->
    <item android:id="@+id/item7" android:title="@string/clearCanvas"  />
    <item android:id="@+id/item8" android:title="@string/closeCanvas"  />
</menu>